# thrift-asio-sc

./: .gitignore  README.md
gen-cpp/: Calculator.cpp  Calculator_async_server.skeleton.cpp  SharedService.h  shared_types.h  tutorial_constants.h  tutorial_types.cpp
thrift-0.9.2/: Makefile.in  configure  configure.ac
thrift-0.9.2/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
thrift-0.9.2/compiler/cpp/: lex.yythriftl.cc
thrift-0.9.2/lib/cpp/: Makefile.am  Makefile.in  libthrift.vcxproj  libthrift.vcxproj.filters  libthriftnb.vcxproj  thrift-asio.pc.in  thrift.sln
thrift-0.9.2/lib/cpp/libthriftnbAsio/: ReadMe.txt  libthriftnbAsio.vcxproj  libthriftnbAsio.vcxproj.filters
thrift-0.9.2/lib/cpp/src/thrift/asyn_asio/: TAsioClientChannel.cpp  TAsioClientChannel.h  TAsioServer.cpp  TAsioServer.h
thrift-0.9.2/lib/cpp/src/thrift/server/: TNonblockingServer.cpp
thrift-0.9.2/lib/cpp/src/thrift/transport/: TSocket.h  TVirtualTransport.h
thrift-0.9.2/tutorial/gen-html/: shared.html  tutorial.html
thrift_client/: CMakeLists.txt  CppClient.cpp
thrift_client/gen-cpp/: Calculator_server.skeleton.cpp_bak  SharedService.cpp  SharedService_async_server.skeleton.cpp_bak  shared_types.cpp  tutorial_types.h
thrift_client/thrift_client/: thrift_client.vcxproj  thrift_client.vcxproj.filters
thrift_server/: CMakeLists.txt  CMakeLists.txt~  CppServer.cpp
thrift_server/gen-cpp/: Calculator.h  tutorial_constants.cpp
thrift_server/thrift_server/: thrift_server.vcxproj  thrift_server.vcxproj.filters
